--- a/Kurzusok/Kurzusok/Views/Home/Index.cshtml
+++ b/Kurzusok/Kurzusok/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
     <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#applyDelete">
         Félév törlése
     </button>
-    <button type="button" class="btn btn-primary" data-toggle="ajax-modal" data-target="#addSubject" data-url="@Url.Action("CreateSubject")" data-id="@id">Tárgy hozzáadása</button>
+    <button type="button" class="btn btn-primary" data-toggle="subject-modal" data-target="#addSubject" data-url="@Url.Action("CreateSubject")" data-id="@id">Tárgy hozzáadása</button>
 </div>
 <div id="PlaceHolderHere"></div>
 
