--- a/Kurzusok/Kurzusok/wwwroot/css/sidebar.css
+++ b/Kurzusok/Kurzusok/wwwroot/css/sidebar.css
@@ -1,45 +1,62 @@
-﻿.sidebar {
+﻿
+/*@media (min-width: 768px) {*/
+.sidebar {
+    position: fixed;
+    top: 70px;
+    left: 0;
+    z-index: 1;
+    display: block;
+    padding: 20px 0 0 0;
+    overflow-x: hidden;
+    overflow-y: auto;
+    background-color: #ecf0f1;
+    border-right: 1px solid #eee;
+    /*width: 200px;*/
+    width: 60px;
+    transition: 0.5s;
+    height: 100%; /* 100% Full-height */
+}
+/*}*/
+
+#opened {
     display: none;
 }
 
-@media (min-width: 768px) {
-    .sidebar {
-        position: fixed;
-        top: 70px;
-        left: 0;
-        z-index: 1;
-        display: block;
-        padding: 0;
-        overflow-x: hidden;
-        overflow-y: auto;
-        background-color: #ecf0f1;
-        border-right: 1px solid #eee;
-        /*width: 200px;*/
-        width: 60px;
-        transition: 0.5s;
-        height: 100%; /* 100% Full-height */
+    #opened > height, #closed > * {
+        height: 40px;
+        line-height: 40px;
     }
-}
 
+#closed {
+    display: inline;
+    text-align: center;
+}
 /* Sidebar navigation */
 .nav-sidebar {
     margin-right: -21px; /* 20px padding + 1px border */
     margin-bottom: 20px;
     margin-left: -20px;
-    display: none;
 }
 
-.nav-sidebar > li > a {
-    padding-right: 20px;
-    padding-left: 20px;
-}
+    .nav-sidebar > li > a {
+        padding-right: 20px;
+        padding-left: 20px;
+    }
 
-.nav-sidebar > .active > a,
-.nav-sidebar > .active > a:hover,
-.nav-sidebar > .active > a:focus {
-    color: rgba(0, 0, 0, 0.9);
-    background-color: #cfd9db;
-}
+    .nav-sidebar > .active > a,
+    .nav-sidebar > .active > a:hover,
+    .nav-sidebar > .active > a:focus {
+        color: rgba(0, 0, 0, 0.9);
+        background-color: #cfd9db;
+    }
+
+    .nav-sidebar .dropdown-menu > a:hover {
+        text-decoration: underline !important;
+    }
+
+    .nav-sidebar > .nav-item > a {
+        cursor: pointer;
+    }
 
 @media (min-width: 768px) {
     .main {
@@ -51,4 +68,24 @@
 
 body {
     padding-top: 100px;
+}
+
+.sidebar .fas {
+    color: #7b8a8b !important;
+}
+.left-checkbox label {
+    text-align: right;
+    float: right;
+    font-weight: bold;
+}
+
+.left-checkbox input[type=checkbox] {
+    margin-left: 0;
+}
+
+#excelTable{
+    display:none;
+}
+#dropdownTable {
+    display:block;
 }
